# mygestures

./: .cproject  .project  4fingers.xml  99-mygestures.rules  APKBUILD  AUTHORS  Cargo.toml  Dockerfile  Makefile  Makefile.am  Makefile.in  NEWS  PACKAGING.md  README  README.md  build-docker.sh  bump-version.sh  config.status  configure  configure.ac  docker-compose.yml  gestos.desktop  meson.build  meson_options.txt  mygestures.conf  mygestures.hwdb  mygestures.json  mygestures.post-install  mygestures.xml  mygestures.yaml  mygestures2.xml  proposal_better_config.yaml  touchpad4.xml
.github/workflows/: package.yml
autom4te.cache/: output.0  requests  traces.0  traces.1
build-aux/: cargo.sh  mygestures.service.in  org.mygestures.Daemon.service.in  post-install.sh
debian/: README  README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  mygestures.cron.d.ex  mygestures.default.ex  mygestures.doc-base.EX  postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
packaging/: 99-mygestures.rules  APKBUILD  PACKAGING.md  bump-version.sh  mygestures.conf  mygestures.pre-install  mygestures.spec
src/: .gitignore  Makefile  Makefile.am  Makefile.in  action_backend.h  action_backend_wayland.c  action_backend_x11.c  actions.c  actions.h  backing.c  bresenham.c  bresenham.h  brush-image.c  brush-shadow.h  brush.c  brush.h  config.h  config.h.in  config.rs  configuration.c  configuration.h  configuration_parser.c  configuration_parser.h  drawing-backing.c  drawing-backing.h  drawing-bresenham.c  drawing-brush-image.c  drawing-brush-image.h  drawing-brush-shadow.h  drawing-brush.c  drawing-brush.h  generic_wm.c  gestos.c  gestos.h  gestures.c  gestures.h  grabbing-evdev.c  grabbing-evdev.h  grabbing-libinput.c  grabbing-libinput.h  (+47 more)
src/.deps/: backing.Po  bresenham.Po  brush-image.Po  brush.Po  generic_wm.Po  gestures.Po  grabbing.Po  helpers.Po
src/drawing/: drawing-backing.c  drawing-backing.h  drawing-bresenham.h  drawing-brush-image.c  drawing-brush-image.h  drawing-brush.c
