[package]
name = "mygestures"
version = "4.0.0"
edition = "2021"
authors = ["Lucas Augusto Deters <lucasdeters@gmail.com>"]

[lib]
name = "mygestures"
path = "src/lib.rs"

[[bin]]
name = "mygestures"
path = "src/bin/mygestures.rs"

[[bin]]
name = "gestos"
path = "src/bin/gestos.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_6"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
nix = { version = "0.27", features = ["mman", "signal", "fs", "user", "ioctl", "poll"] }
libc = "0.2"
regex = "1"
once_cell = "1.18"
log = "0.4"
env_logger = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.12", features = ["tokio", "uinput"] }
