option('udevdir', type: 'string', value: '', description: 'Directory for udev rules')
option('modulesloaddir', type: 'string', value: '', description: 'Directory for systemd modules-load configuration')
option('dbusservicedir', type: 'string', value: '', description: 'Directory for D-Bus services')
option('systemduserunitdir', type: 'string', value: '', description: 'Directory for systemd user services')
